# nlp_agent

./: .gitignore  Clio_Custom_Field_Set.postman_collection.json  INSTRUCTIONS.md  README.md  agent.py  chat_interface.py  chat_interface_pro.py  clio_private_partial_openapi.json  config.py  main.py  openapi.json  pyproject.toml  requirements.txt  simple_auth_test.py  start_agent.sh  start_all.sh  start_chat.sh  start_chat_pro.sh  start_quick.sh  test_auth.py  test_custom_field_sets.py  test_server.py  verify_setup.py  working_demo.py
models/: requests.py  responses.py
nlp_agent/: __init__.py  cli.py
nlp_agent/api/: __init__.py  dependencies.py  main.py  services.py
nlp_agent/cli_integration/: __init__.py  manager.py
nlp_agent/client/: __init__.py  client.py
nlp_agent/models/: __init__.py  schemas.py
nlp_agent/nlp/: __init__.py  processor.py
services/: auth_manager.py  client_generator.py  clio_private_api.py  clio_session.py  rate_limiter.py
tests/: __init__.py  test_api.py  test_client.py  test_integration.py  test_models.py  test_nlp_processor.py  test_unit_tools.py  test_workflow_tools.py
tools/: clio_api.py  clio_cli.py  custom_field_set_tools.py  custom_fields_cli.py  custom_fields_workflow_tools.py
